<b><u> v1.33, 25.04.2016</b></u>
<font color=#FF8C00>&#9830;</font> Delete QuickArmoryLink.
<font color=#FF8C00>&#9830;</font> Add RealLinks (by p3lim) bugs a bit by Warforged or timless Items.
<font color=#FF8C00>&#9830;</font> Change Nameplate Font to TukUI Font.
<font color=#FF8C00>&#9830;</font> Add more Frames to blizzMove.
<font color=#FF8C00>&#9830;</font> Overhaul the FriendsList Skin. Based on Azilroka's EnhancedFriendsList.

<b><u> v1.32, 19.04.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Added BenikUI's option to change castbar text color (classcolor).
<font color=#FF8C00>&#9830;</font> GameMenu: Adjust the StrataLevel of the Top Style Bar.
<font color=#FF8C00>&#9830;</font> ObjectivTracker: For some reason some textures are left. Now hide them.
<font color=#FF8C00>&#9830;</font> Skins: The Glyph Background are now transparent.
<font color=#FF8C00>&#9830;</font> Skins: Overhaul the SpellBook Skin. (Code taken from AddOnSkins, a little bit at least :D)
<font color=#FF8C00>&#9830;</font> Misc: Code Cleanup.

<b><u> v1.31, 08.04.2016</b></u>
<font color=#FF8C00>&#9830;</font> UnitFrames: Add a new Tag [num:targeting] it will display a number which indicates how many people in your group is targeting the unit. (Credits Blazeflack - ElvUI_CustomTags)
<font color=#FF8C00>&#9830;</font> Reminder: Fixed a nil Error in the Reminder Options.

<b><u> v1.30, 29.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Move the settings from AddOnSkins to my Install. So it will not to be forced.

<b><u> v1.29, 28.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Move the settings from the Datatexts where it belongs.
<font color=#FF8C00>&#9830;</font> Skins: Change a few MasterPlan Fonts. Thx Darth Predator. (Requires AddOnSkins)

<b><u> v1.28, 23.03.2016</b></u>
<font color=#FF8C00>&#9830;</font> UnitFrames: Fixed the greyed out Option in Unitframes.

<b><u> v1.27, 23.03.2016</b></u>