@@ -1,3 +1,8 @@
+** v1.34, xx.xx.xxxx**
+* Forgot StarCraft 2 Icon in the FriendsList.
+* Move the FriendsList Textures to an own Folder.
+
+\\ \\
 ** v1.33, 25.04.2016**
 * Delete QuickArmoryLink.
 * Add RealLinks (by p3lim) bugs a bit by Warforged or timless Items.
