@@ -136,7 +136,7 @@ local function ColoringFriendsList()
 					local Diff = format("|cff%02x%02x%02x", r * 255, g * 255, b * 255)
 					nameString:SetTextColor(classc.r, classc.g, classc.b)
 					nameString:SetText("|cFF82C4FC" .. realName .. "|r |cFFFFFFFF(|r" .. toonName .. "|cFFFFFFFF - " .. LEVEL .. "|r " .. Diff .. level .. "|r|cFFFFFFFF)|r")
-					icon:SetTexture([[Interface\AddOns\ElvUI_MerathilisUI\media\textures\]] .. faction)
+					icon:SetTexture([[Interface\AddOns\ElvUI_MerathilisUI\media\textures\gameIcons\]] .. faction)
 					local filename, fontHeight, flags = nameString:GetFont()
 				end
 				if CanCooperateWithGameAccount(toonID) ~= true then
